# noggit3

./: CMakeLists.txt  README.md
cmake/: FindFMT.cmake  FindMySQL.cmake
include/win/: StackWalker.cpp
src/math/: bounding_box.cpp  bounding_box.hpp  frustum.cpp  frustum.hpp  interpolation.hpp  matrix_4x4.cpp  matrix_4x4.hpp  projection.hpp  quaternion.hpp  ray.cpp  ray.hpp  trig.hpp  vector_2d.cpp  vector_2d.hpp  vector_4d.hpp
src/mysql/: mysql.cpp
src/network/: packet.cpp  packet.h  session.cpp  session.h
src/noggit/: Animated.h  AsyncLoader.cpp  AsyncLoader.h  AsyncObject.h  Brush.cpp  ChunkWater.cpp  ChunkWater.hpp  DBC.cpp  DBC.h  DBCFile.cpp  MPQ.cpp  MPQ.h  MapChunk.cpp  MapChunk.h  MapTile.cpp  MapTile.h  MapView.cpp  MapView.h  Misc.cpp  Misc.h  Model.cpp  Model.h  ModelHeaders.h  ModelInstance.cpp  ModelInstance.h  ModelManager.cpp  ModelManager.h  Particle.cpp  Particle.h  Selection.h  Sky.cpp  Sky.h  TextureManager.cpp  TextureManager.h  TileWater.cpp  TileWater.hpp  WMO.cpp  WMO.h  WMOInstance.cpp  WMOInstance.h  (+29 more)
src/noggit/ui/: About.cpp  CurrentTexture.cpp  CurrentTexture.h  CursorSwitcher.cpp  CursorSwitcher.h  DetailInfos.cpp  DetailInfos.h  FlattenTool.cpp  FlattenTool.hpp  Help.cpp  Help.h  HelperModels.cpp  ModelImport.cpp  ObjectEditor.cpp  ObjectEditor.h  RotationEditor.cpp  RotationEditor.h  SettingsPanel.cpp  TextureList.cpp  TextureList.hpp  TexturePicker.cpp  TexturePicker.h  TexturingGUI.cpp  TexturingGUI.h  Toolbar.cpp  Toolbar.h  Water.cpp  Water.h  ZoneIDBrowser.cpp  checkbox.hpp  clickable_label.cpp  font_awesome.cpp  font_noggit.cpp  font_noggit.hpp  main_window.cpp  main_window.hpp  minimap_widget.cpp  shader_tool.cpp  shader_tool.hpp  terrain_tool.cpp  (+9 more)
src/opengl/: context.cpp  context.hpp  primitives.cpp  primitives.hpp  scoped.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/ui/: about.cpp  about.h  checkbox.hpp  clickable_label.cpp  current_texture.cpp  current_texture.h  cursor_switcher.cpp  cursor_switcher.h  detail_infos.cpp  detail_infos.h  flatten_tool.cpp  flatten_tool.hpp  font_awesome.cpp  font_noggit.cpp  font_noggit.hpp  help.cpp  help.h  helper_models.cpp  helper_models.h  main_window.cpp  main_window.hpp  map_view.cpp  map_view.h  minimap_widget.cpp  model_import.cpp  model_import.h  object_editor.cpp  object_editor.h  push_button.hpp  rotation_editor.cpp  rotation_editor.h  settings_panel.cpp  settings_panel.h  shader_tool.cpp  shader_tool.hpp  terrain_tool.cpp  texture_list.cpp  texture_list.hpp  texture_palette_small.cpp  texture_palette_small.hpp  (+15 more)
src/util/: Log.cpp  exception_to_string.cpp  log.cpp  log.h
test/math/: matrix_4x4.cpp  trig.cpp  vector_2d.cpp
